# advent2025

./: .gitignore
haskell-aoc2025/: CHANGELOG.md  README.md  haskell-aoc2025.cabal  package.yaml
haskell-aoc2025/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Lib.hs
haskell-aoc2025/test/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs
